# gl_Trackball

./: CMakeLists.txt  README.md  app.cpp  app.h  camera.h  core.cpp  core.h  imgui.ini  main.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
glsl/: fragment.glsl  vertex.glsl
